# rink

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh  release.sh
src/: app.rs  category.rs  command.rs  config.rs  keys.rs  launcher.rs  lib.rs  main.rs  runtime.rs  search.rs  setup.rs  sort.rs  state.rs  status.rs  tmux.rs  ui.rs
tests/: launcher_test.rs  setup_command_test.rs  snapshot_test.rs
tests/snapshots/: snapshot_test__category_rename.snap  snapshot_test__collapsed_category.snap  snapshot_test__confirm_kill.snap  snapshot_test__create_session.snap  snapshot_test__empty_sessions.snap  snapshot_test__help_view.snap  snapshot_test__normal_view.snap  snapshot_test__search_mode.snap  snapshot_test__selected_session.snap  snapshot_test__sort_indicator.snap
