[package]
name = "rink"
version = "0.1.10"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tempfile = "3"
chrono = "0.4"
unicode-width = "0.2"

[dev-dependencies]
insta = "1"
